logs/20260123_112816.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Compile Succeeded,path:Object3d.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3d.PS.hlsl,prefile:ps_6_0

Object3d.PS.hlsl:88:97: error: use of undeclared identifier 'cos'
    float32_t3 diffuse = gMaterial.color.rgb * textureColor.rgb * gDirectionalLight.color.rgb * cos * gDirectionalLight.intensity;
                                                                                                ^

Compile Succeeded,path:Object3d.PS.hlsl,profile:ps_6_0

Begin CompileShader,path:Particle.VS.hlsl,prefile:vs_6_0

Compile Succeeded,path:Particle.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Particle.PS.hlsl,prefile:ps_6_0

Compile Succeeded,path:Particle.PS.hlsl,profile:ps_6_0

